fix upload table overflow and refactor plain url to be copied by button

--- a/mysite/static/mysite/cover.css
+++ b/mysite/static/mysite/cover.css
@@ -83,6 +83,7 @@ table {
     border-collapse: collapse;
     width: 100%;
     background-color: #ffffff;
+    word-break: break-word;
 }
 
 table td, table th {
